# VICON

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
configs/: default.yaml
configs/datasets/: default.yaml
configs/loss/: default.yaml
configs/model/: default.yaml
configs/opt/: default.yaml
configs/rollout/: default.yaml
dataset_prepare/: README.md  convert_PDEBench_highVis.py  convert_PDEBench_lowVis.py  split_PDEBench.py
src/: crop_utils.py  dataset.py  dataset_utils.py  model_utils.py  models.py  rollout.py  rollout_strategy.py  rollout_utils.py  train.py  train_utils.py  trainer.py  utils.py
